k8s/openwrt/resources/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: https
      port: 443
      targetPort: https

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: service
  labels:
    kubernetes.io/service-name: openwrt-service
addressType: IPv4
ports:
  - name: https
    appProtocol: http
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - 192.168.1.1
    conditions: {}
